# fab-kit

./: .envrc  .fab-kit-dev  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile
.agents/tasks/: prd-fab-kit.json
.claude/commands/: retrospect.md
.claude/skills/: fab-apply.md  fab-archive.md  fab-ff.md  fab-init.md  fab-status.md  fab-switch.md
.fab/: backlog.md
.github/: formula-template.rb
.github/workflows/: release.yml
.opencode/commands/: fab-backfill.md  fab-clarify.md  fab-continue.md  fab-discuss.md  fab-fff.md  fab-help.md  fab-hydrate.md  fab-new.md  fab-review.md  retrospect.md
.ralph/: progress.md
.ralph/.tmp/: prd-prompt-20260206-221828-88728.md  prompt-20260206-222820-4396-1.md  prompt-20260206-222820-4396-10.md  prompt-20260206-222820-4396-12.md  prompt-20260206-222820-4396-13.md  prompt-20260206-222820-4396-16.md  prompt-20260206-222820-4396-2.md  prompt-20260206-222820-4396-4.md  prompt-20260206-222820-4396-6.md  prompt-20260206-222820-4396-7.md  prompt-20260206-222820-4396-8.md  story-20260206-222820-4396-1.json  story-20260206-222820-4396-1.md  story-20260206-222820-4396-10.json  story-20260206-222820-4396-10.md  story-20260206-222820-4396-12.json  story-20260206-222820-4396-12.md  (+14 more)
Formula/: fab-kit.rb
fab/: backlog.md  config.yaml  constitution.md  context.md  ideas.md
scripts/: download-count.sh  install.sh  release.sh
src/fab-rust/: Cargo.toml
src/fab-rust/src/: change.rs  log.rs  main.rs  panemap.rs  resolve.rs  runtime.rs  sendkeys.rs  status.rs  statusfile.rs
src/fab-rust/tests/: integration_test.rs
(+2487 files in other folders)
