[package]
name = "fab-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fab-rust"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
